kustomize/overlays/dev/customer/pixta-editor/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: editor
  labels:
    app: editor
    stage: review
spec:
  selector:
    matchLabels:
      app: editor
      stage: review
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: editor
        stage: review
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: editor-frontend
  labels:
    app: editor-frontend
    stage: review
spec:
  selector:
    matchLabels:
      app: editor-frontend
      stage: review
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: editor-frontend
        stage: review
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
