kustomize/overlays/dev/customer/pixta-editor/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: editor-svc
spec:
  selector:
    app: editor
    stage: review
---
apiVersion: v1
kind: Service
metadata:
  name: editor-frontend-svc
spec:
  selector:
    app: editor-frontend
    stage: review
